rom-properties (2.4-1ppa6~oracular5) oracular; urgency=medium

  * Add statx() to syscall whitelist to fix SIGSYS in amiiboc on armhf.

 -- David Korth <gerbilsoft@gerbilsoft.com>  Tue, 12 Nov 2024 19:57:50 -0500

rom-properties (2.4-1ppa6~oracular4) oracular; urgency=medium

  * rom-properties-gtk4: Depend on libromdata5, not libromdata2.

 -- David Korth <gerbilsoft@gerbilsoft.com>  Tue, 12 Nov 2024 18:36:49 -0500

rom-properties (2.4-1ppa6~oracular3) oracular; urgency=medium

  * Actually enable KF6.

 -- David Korth <gerbilsoft@gerbilsoft.com>  Mon, 11 Nov 2024 20:50:37 -0500

rom-properties (2.4-1ppa6~oracular2) oracular; urgency=medium

  * Fix KF6 paths.

 -- David Korth <gerbilsoft@gerbilsoft.com>  Mon, 11 Nov 2024 20:38:38 -0500

rom-properties (2.4-1ppa6~oracular1) oracular; urgency=medium

  * Build for Ubuntu 24.10 "Oracular" Oriole.

  * Enabled KF6 builds.

 -- David Korth <gerbilsoft@gerbilsoft.com>  Mon, 11 Nov 2024 20:06:25 -0500

rom-properties (2.4-1ppa6~noble2) noble; urgency=medium

  * Fix RomThumbnailCreator-kf5.so filename.

 -- David Korth <gerbilsoft@gerbilsoft.com>  Mon, 11 Nov 2024 19:53:10 -0500

rom-properties (2.4-1ppa6~noble1) noble; urgency=medium

  * Build for Ubuntu 24.04 "Noble" Numbat.

    PPA version bumped to ensure it updates from previous versions.

  * Enabled GTK4 builds. (Nautilus 43)

  * KF5 5.115.0 supports ThumbnailCreator.

 -- David Korth <gerbilsoft@gerbilsoft.com>  Mon, 11 Nov 2024 19:34:55 -0500

rom-properties (2.4-1ppa6~jammy1) jammy; urgency=medium

  * Build for Ubuntu 22.04 "Jammy" Jellyfish.

    PPA version bumped to ensure it updates from previous versions.

  * KF5 5.92.0 supports JSON plugin loading, but not ThumbnailCreator.
    Also, rp-convert-to-png.desktop is no longer installed in kservices5.
    It's now installed in /usr/share/kio/servicemenus/ .

 -- David Korth <gerbilsoft@gerbilsoft.com>  Mon, 11 Nov 2024 11:38:28 -0500

rom-properties (2.4-1ppa6~focal1) focal; urgency=medium
