@@ -2,6 +2,7 @@
 MACRO(FIND_QT4_AND_KDE4)
 	SET(ENV{QT_SELECT} qt4)
 	SET(QT_DEFAULT_MAJOR_VERSION 4)
+	SET(QT_NO_CREATE_VERSIONLESS_TARGETS TRUE)
 
 	SET(QT4_NO_LINK_QTMAIN 1)
 	FIND_PACKAGE(Qt4 4.6.0 ${REQUIRE_KDE4} COMPONENTS QtCore QtGui QtDBus)
