@@ -8,6 +8,7 @@ MACRO(FIND_QT5_AND_KF5)
 
 	SET(ENV{QT_SELECT} qt5)
 	SET(QT_DEFAULT_MAJOR_VERSION 5)
+	SET(QT_NO_CREATE_VERSIONLESS_TARGETS TRUE)
 
 	# FIXME: Search for Qt5 first instead of ECM?
 
